// Copyright (C) 2021 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

option go_package = "storj.io/edge/pkg/auth/badgerauth/pb";

package badgerauth;

message Record {
  // record data
  int64 created_at_unix = 1;
  bool public = 2;
  repeated string usage_tags = 12;

  // denormalized information from access grant
  string satellite_address = 3;
  bytes public_project_id = 11;
  bytes macaroon_head = 4;
  int64 expires_at_unix = 5;
  int64 project_created_at_unix = 13;

  // sensitive data
  bytes encrypted_secret_key = 6;
  bytes encrypted_access_grant = 7;

  // invalidation tracking
  string invalidation_reason = 8;
  int64 invalidated_at_unix = 9;

  enum State { CREATED = 0; }

  // deprecated synchronization-related data
  State state = 10;
}
